force-app/main/default/objects/ReturnOrder/fields/Advance_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Advance_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Replacement</label>
    <type>Checkbox</type>
</CustomField>