force-app/main/default/objects/ReturnOrder/fields/Is_No_Product_Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_No_Product_Return_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is No Product Return Order</label>
    <type>Checkbox</type>
</CustomField>