force-app/main/default/objects/ReturnOrder/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>